Add reading texture coords from obj files, small improvement for texture colors reading